--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,7 @@
     <string name="action_save">Save</string>
     <string name="hint_title">Title</string>
     <string name="title_activity_view_note">Note</string>
+    <string name="action_edit">Edit</string>
+    <string name="title_activity_edit_note">Edit</string>
 
 </resources>
