--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,5 +15,7 @@
     <string name="title_activity_view_note">Note</string>
     <string name="action_edit">Edit</string>
     <string name="title_activity_edit_note">Edit</string>
+    <string name="delete_dialog_title">Delete Note</string>
+    <string name="delete_dialog_message">Are you sure to delete this note?</string>
 
 </resources>
