Actualizar gradle, mensajes en español

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,20 +2,17 @@
 <resources>
 
     <string name="app_name">My Sync Notes</string>
-    <string name="navigation_drawer_open">Open navigation drawer</string>
-    <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_user">Add</string>
-    <string name="action_sync">Sync</string>
-    <string name="action_settings">Settings</string>
-    <string name="title_activity_main">Notes</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="title_activity_new_note">New</string>
-    <string name="action_save">Save</string>
-    <string name="hint_title">Title</string>
-    <string name="title_activity_view_note">Note</string>
-    <string name="action_edit">Edit</string>
-    <string name="title_activity_edit_note">Edit</string>
-    <string name="delete_dialog_title">Delete Note</string>
-    <string name="delete_dialog_message">Are you sure to delete this note?</string>
+    <string name="action_user">Crear</string>
+    <string name="action_sync">Sincronizar</string>
+    <string name="action_settings">Configuración</string>
+    <string name="title_activity_main">Notas</string>
+    <string name="title_activity_new_note">Nueva</string>
+    <string name="action_save">Guardar</string>
+    <string name="hint_title">Título</string>
+    <string name="title_activity_view_note">Nota</string>
+    <string name="action_edit">Editar</string>
+    <string name="title_activity_edit_note">Editar</string>
+    <string name="delete_dialog_title">Borrar nota</string>
+    <string name="delete_dialog_message">¿Desea eliminar esta nota?</string>
 
 </resources>
